examples/invalid_scl/unbound_3.scl
rel R(a) = _ = max[a](o: Q(_, a))
